# chabot-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: app.py
src/chatbot_assistant/: agent_orchestrator.py  ai_bot.py
src/chatbot_assistant/utils/: config.py  open_ai_client.py  system_prompt_global.py
tests/: test_agent.py
